<resources>
    <string name="app_name">ShopApp</string>
    <string name="th_m_m_t_h_ng">Thêm mặt hàng</string>
    <string name="item">Item</string>
    <string name="qty_123">Qty: 123</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add item</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="t_n_m_t_h_ng">Tên mặt hàng</string>
    <string name="_123">123</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>